--- a/web/templates/journal.html
+++ b/web/templates/journal.html
@@ -13,7 +13,7 @@
                 <button id="btn-journal-search" class="btn-primary small-btn">조회</button>
             </div>
             <div class="actions">
-                <button id="btn-journal-sync" class="btn-primary small-btn">
+                <button id="btn-journal-sync" class="btn-secondary small-btn">
                     증권사 동기화
                 </button>
             </div>
