--- a/web/templates/journal.html
+++ b/web/templates/journal.html
@@ -50,13 +50,15 @@
             <table id="journal-table" class="data-table">
                 <thead class="sticky-header">
                     <tr>
-                        <th style="width: 140px;">일자/시간</th>
-                        <th>종목</th>
-                        <th>구분</th>
+                        <th style="width: 100px;">일자/시간</th>
+                        <th style="width: 140px;">종목</th>
+                        <th style="width: 60px;">구분</th>
+                        <th class="text-right">매입평균</th>
                         <th class="text-right">가격</th>
                         <th class="text-right">수량</th>
                         <th class="text-right">정산금액</th>
                         <th class="text-right">실현손익</th>
+                        <th class="text-right">비용</th>
                         <th>전략</th>
                         <th>주문번호</th>
                     </tr>
