--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -58,6 +58,10 @@
                             <span class="value" id="total-asset">₩0</span>
                         </div>
                         <div class="metric">
+                            <span class="label">주식 평가금</span>
+                            <span class="value" id="stock-eval">₩0</span>
+                        </div>
+                        <div class="metric">
                             <span class="label">예수금</span>
                             <span class="value" id="cash">₩0</span>
                         </div>
