--- a/web/templates/manual.html
+++ b/web/templates/manual.html
@@ -258,6 +258,11 @@
 
         <h2>공통 설정 (Common)</h2>
         <div class="config-item">
+            <span class="config-name">entry_start_time</span>
+            <p class="config-desc">매수 진입 허용 시작 시간입니다. 장 시작 시 초반 변동성을 피하기 위해 사용합니다. (HHMMSS)</p>
+            <p class="config-example">예시: "091000" (09시 10분 00초부터 매수 진입 시작)</p>
+        </div>
+        <div class="config-item">
             <span class="config-name">max_positions</span>
             <p class="config-desc">동시에 보유할 수 있는 최대 종목 수입니다.</p>
             <p class="config-example">예시: 10 (최대 10개 종목 보유)</p>
@@ -292,7 +297,7 @@
         <p>일봉상 상승 추세인 종목에서 분봉상 골든크로스가 발생할 때 매수하는 정석적인 추세 추종 전략입니다.</p>
         <h3>매매 로직</h3>
         <ul>
-            <li><strong>진입</strong>: 일봉 20일선 상승 & 종가 > 20일선 (정배열) 상태에서, 5분 이평선이 20분 이평선을 상향 돌파(골든크로스)하고 거래량이 급증할 때.</li>
+            <li><strong>진입</strong>: 일봉상 20일선 상승 추세 & 전일 거래량 급증(상대 거래량 > 1.5배) 상태에서, 분봉상 골든크로스가 발생하고 거래량이 터질 때.</li>
             <li><strong>청산 ("확정 수익 + 추세 추종" 혼합 전략)</strong>:
                 <ol>
                     <ol>
@@ -322,6 +327,11 @@
             <span class="config-name">vol_k</span>
             <p class="config-desc">평균 거래량 대비 급증 배수입니다.</p>
             <p class="config-example">예시: 1.5 (1.5배 이상)</p>
+        </div>
+        <div class="config-item">
+            <span class="config-name">prev_daily_vol_k</span>
+            <p class="config-desc">일봉 상대 거래량 필터입니다. 전일 거래량이 "전일 기준 20일 평균 거래량"의 K배 이상이어야만 진입합니다.</p>
+            <p class="config-example">예시: 1.5 (평소보다 1.5배 이상 거래량 폭증 시에만 진입)</p>
         </div>
         <div class="config-item">
             <span class="config-name">ma_short</span>
