--- a/web/templates/journal.html
+++ b/web/templates/journal.html
@@ -50,17 +50,18 @@
             <table id="journal-table" class="data-table">
                 <thead class="sticky-header">
                     <tr>
-                        <th style="width: 100px;">일자/시간</th>
-                        <th style="width: 140px;">종목</th>
-                        <th style="width: 60px;">구분</th>
-                        <th class="text-right">매입평균</th>
-                        <th class="text-right">가격</th>
-                        <th class="text-right">수량</th>
-                        <th class="text-right">정산금액</th>
-                        <th class="text-right">실현손익</th>
-                        <th class="text-right">비용</th>
+                        <th style="width: 130px;">일자/시간</th>
+                        <th style="width: 90px;">종목</th>
+                        <th style="width: 50px;">구분</th>
+                        <th class="text-right" style="white-space: nowrap;">매입평균</th>
+                        <th class="text-right" style="white-space: nowrap;">가격</th>
+                        <th class="text-right" style="white-space: nowrap;">수량</th>
+                        <th class="text-right" style="white-space: nowrap;">정산금액</th>
+                        <th class="text-right" style="white-space: nowrap;">수익률</th>
+                        <th class="text-right" style="white-space: nowrap;">실현손익</th>
+                        <th class="text-right" style="white-space: nowrap;">비용</th>
                         <th>전략</th>
-                        <th>주문번호</th>
+                        <th style="width: 80px;">주문번호</th>
                     </tr>
                 </thead>
                 <tbody id="journal-list">
