--- a/web/templates/journal.html
+++ b/web/templates/journal.html
@@ -9,7 +9,11 @@
                 <input type="date" id="journal-start" class="date-input">
                 <span style="color: #aaa;">~</span>
                 <input type="date" id="journal-end" class="date-input">
-                <input type="text" id="journal-symbol" placeholder="종목코드/명" class="symbol-input">
+                <div class="autocomplete-wrapper" style="width: 150px;">
+                    <input type="text" id="journal-symbol" placeholder="종목코드/명" class="symbol-input" autocomplete="off"
+                        style="width: 100%;">
+                    <div id="journal-symbol-list" class="autocomplete-items" style="display: none;"></div>
+                </div>
                 <button id="btn-journal-search" class="btn-primary small-btn">조회</button>
             </div>
             <div class="actions">
